--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html{
-  cursor: url('cursor.png'), auto;
+  cursor: url('img/cursor.png'), auto;
 
 }
 body{
@@ -16,9 +16,12 @@ p{
   margin: 0;
   display: flex;
   justify-content: center;
-  padding-top: 5px;
-  font-size: 23px;
+  font-size: 24px;
   color: rgb(243, 137, 154);
+}
+.title{
+  font-family: "Changa One";
+  font-size: 40px;
 }
 .card {
   display: flex;
@@ -28,8 +31,18 @@ p{
   overflow: hidden;
 }
 .nav-bar{
-background-color: rgb(253, 239, 195);
-padding:0;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  background-color: rgb(253, 239, 195);
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.gif-img{
+ width: 52px;
+ margin-left: 10px;
+ margin-right: 15px;
 }
 .nav-list{
   background-color: rgb(255, 239, 239);
@@ -37,19 +50,23 @@ padding:0;
 }
 .add-button{
   background-color: rgb(108, 255, 108);
+  font-family : 'Share Tech';
   color: white;
   border : none;
-  font-size: 15px;
+  font-size: 18px;
   border-radius: 22px;
-  cursor: url('cursor.png'),auto;
+  cursor: url('img/cursor.png'), auto;
 }
-.delete-button{
+.delete-button,
+.delete-all-button{
   background : rgb(243, 130, 130);
+  font-family : 'Share Tech';
   border: none;
   color : white;
   padding: 10px 0px ;
+  font-size: 18px;
   border-radius: 22px;
-  cursor: url('cursor.png'),auto;
+  cursor: url('img/cursor.png'), auto;
 }
 .todo-grid,
 .todo-input-grid{
@@ -73,7 +90,7 @@ padding:0;
  font-size: 15px;
  padding: 6px;
  border: none;
- cursor: url('cursor.png'), auto;
+  cursor: url('img/cursor.png'), auto;
 }
 .bottom-row{
   display: flex;
@@ -82,9 +99,6 @@ padding:0;
   margin-top: 10px; 
 }
 .delete-all-button{
-  background : rgb(243, 130, 130);
-  border: none;
-  color : white;
-  padding: 10px 30px ;
+  padding: 10px 26px ;
   border-radius: 22px;
 }
